[package]
name = "echos-not-easy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turmoil = "*"
# tokio = {version="*", features=["full"], package="madsim-tokio"}
tokio = "*"
rand = "*"
madsim = "*"
snafu = "*"

[[bin]]
name = "basic-client"
path = "src/basic/client.rs"

[[bin]]
name = "basic-server"
path = "src/basic/server.rs"

# [[bin]]
# name = "retry-server"
# path = "src/retry/server.rs"

# [[bin]]
# name = "retry-client"
# path = "src/retry/client.rs"
